--- a/lang/ru.json
+++ b/lang/ru.json
@@ -8,7 +8,7 @@
   "server.input.networkType": "✉️ Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
   "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
   "server.input.filename": "💽 Введите имя файла: ",
-  "server.error.fileNotFound": "❌ Файл не найден. Выход...",
+  "server.error.fileNotFound": "❌ Файл не найден.",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
   "server.info.running": "🌐 Сервер запущен...",
