--- a/lang/ru.json
+++ b/lang/ru.json
@@ -12,8 +12,11 @@
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
   "server.info.running": "🌐 Сервер запущен...",
+  "server.error.publicIpNotFound": "❌ Невозможно определить публичный IP адрес.",
+
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
+
   "client.info.fileReceived": "✅ Файл получен и расшифрован.",
   "client.hash.checking": "🔍 Проверка хэша...",
   "client.hash.correct": "✅ Хэш файла верный.",
@@ -25,10 +28,14 @@
   "client.error.invalidKey": "❌ Неверный формат ключа. Пожалуйста, используйте 'ip:порт:имя файла:хэш файла'",
   "client.warning.fileAlreadyExists": "⚠️ Файл уже существует.",
   "client.warning.fileWithSameNameExists": "⚠️ Файл с этим именем уже существует, но с другим хэшем.",
-  "server.error.publicIpNotFound": "❌ Невозможно определить публичный IP адрес.",
-  "main.info.updateAvailable": "🆕 Вышла новая версия: {}",
-  "main.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
-  "main.info.updateDownloading": "⬇️ Загрузка обновления...",
-  "main.info.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
-  "main.info.updateDownloaded": "✅ Обновление загружено."
+
+
+  "update.info.updateAvailable": "🆕 Вышла новая версия: {}",
+  "update.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
+  "update.info.updateDownloading": "⬇️ Загрузка обновления...",
+  "update.info.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
+  "update.info.updateDownloaded": "✅ Обновление загружено.",
+  "update.info.checkingForUpdates": "🔍 Поиск обновлений...",
+  "update.error.connectionTimedOut": "❌ Превышено время ожидания, пожалуйста проверьте подключение к интернету.",
+  "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету."
 }
