--- a/lang/ru.json
+++ b/lang/ru.json
@@ -2,7 +2,7 @@
   "server.info.peername": "🔗 Клиент подключился под {}:{}",
   "server.info.fileSent": "✅ Файл отправлен клиенту.",
   "server.error.errorHandlingClient": "❌ Ошибка при обработке клиента: {}",
-  "server.error.serverFilesDirNotFound": "⚠️ Директория '{}' не существует. Создание...",
+  "server.warn.serverFilesDirNotFound": "⚠️ Директория '{}' не существует. Создание...",
   "server.info.directoryCreated": "✅ Директория создана.",
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
   "server.input.networkType": "✉️ Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
@@ -13,6 +13,10 @@
   "server.info.serverKey": "🔑 Ключ сервера: {}",
   "server.info.running": "🌐 Сервер запущен...",
   "server.error.publicIpNotFound": "❌ Невозможно определить публичный IP адрес.",
+  "server.info.gettingIp": "🔍 Получение публичного IP адреса...",
+  "server.config.filename": "📄 Имя файла",
+  "server.config.port": "🔌 Порт",
+  "server.config.ip": "🖥️ IP",
 
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
@@ -33,9 +37,11 @@
   "update.info.updateAvailable": "🆕 Вышла новая версия: {}",
   "update.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
   "update.info.updateDownloading": "⬇️ Загрузка обновления...",
-  "update.info.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
+  "update.error.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
   "update.info.updateDownloaded": "✅ Обновление загружено.",
   "update.info.checkingForUpdates": "🔍 Поиск обновлений...",
   "update.error.connectionTimedOut": "❌ Превышено время ожидания, пожалуйста проверьте подключение к интернету.",
-  "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету."
+  "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету.",
+
+  "universal.error": "❌ Ошибка: {}"
 }
