--- a/lang/ru.json
+++ b/lang/ru.json
@@ -42,6 +42,7 @@
   "update.info.checkingForUpdates": "🔍 Поиск обновлений...",
   "update.error.connectionTimedOut": "❌ Превышено время ожидания, пожалуйста проверьте подключение к интернету.",
   "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету.",
+  "update.info.latestVersion": "⚡ Вы используете последнюю версию.",
 
   "universal.error": "❌ Ошибка: {}"
 }
