--- a/lang/ru.json
+++ b/lang/ru.json
@@ -7,7 +7,8 @@
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
   "server.input.networkType": "✉️ Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
   "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
-  "server.input.filename": "💽 Введите имя файла: ",
+  "server.input.filename": "> ",
+  "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
   "server.error.fileNotFound": "❌ Файл не найден.",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
@@ -17,6 +18,8 @@
   "server.config.filename": "📄 Имя файла",
   "server.config.port": "🔌 Порт",
   "server.config.ip": "🖥️ IP",
+  "server.error.noFiles": "❌ Нет файлов. Пожалуйста, загрузите файл и попробуйте ещё раз.",
+  "server.error.invalidFilename": "❌ Неверное имя файла.",
 
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
