--- a/lang/ru.json
+++ b/lang/ru.json
@@ -20,6 +20,9 @@
   "server.config.ip": "🖥️ IP",
   "server.error.noFiles": "❌ Нет файлов. Пожалуйста, загрузите файл и попробуйте ещё раз.",
   "server.error.invalidFilename": "❌ Неверное имя файла.",
+  "server.error.connectionReset": "❌ Соединение сброшено.",
+  "server.error.connectionAborted": "❌ Соединение прервано.",
+  "server.error.connectionRefused": "❌ Соединение отклонено.",
 
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
@@ -35,7 +38,8 @@
   "client.error.invalidKey": "❌ Неверный формат ключа. Пожалуйста, используйте 'ip:порт:имя файла:хэш файла'",
   "client.warning.fileAlreadyExists": "⚠️ Файл уже существует.",
   "client.warning.fileWithSameNameExists": "⚠️ Файл с этим именем уже существует, но с другим хэшем.",
-
+  "client.error.filePermissionError": "❌ Нет прав для доступа к файлу.",
+  "client.error.invalidEncryptionKey": "❌ Неверный ключ шифрования. Обычно это происходит из-за включенного VPN на сервере.",
 
   "update.info.updateAvailable": "🆕 Вышла новая версия: {}",
   "update.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
