--- a/lang/en.json
+++ b/lang/en.json
@@ -50,7 +50,7 @@
   "update.info.checkingForUpdates": "🔍 Checking for updates...",
   "update.error.connectionTimedOut": "❌ Timed out, please check your internet connection.",
   "update.error.connectionError": "❌ Connection error, please check your internet connection.",
-  "update.info.latestVersion": "⚡ You're running the latest version.",
+  "update.info.latestVersion": "🫠 You're running the latest version.",
 
   "universal.error": "❌ Error: {}"
 }
