--- a/lang/ru.json
+++ b/lang/ru.json
@@ -7,7 +7,7 @@
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
   "server.input.networkType": "✉️ Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
   "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
-  "server.input.filename": "> ",
+  "server.input.filename": ">> ",
   "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
   "server.error.fileNotFound": "❌ Файл не найден.",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
