--- a/lang/ru.json
+++ b/lang/ru.json
@@ -9,7 +9,6 @@
   "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
   "server.input.filename": ">> ",
   "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
-  "server.error.fileNotFound": "❌ Файл не найден.",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
   "server.info.running": "🌐 Сервер запущен...",
@@ -26,6 +25,7 @@
 
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
+  "main.info.updateDescription": "✨ Обновление Экспериментов!\nВы можете включить/выключить эксперименты в experiments.json\n",
 
   "client.info.fileReceived": "✅ Файл получен и расшифрован.",
   "client.hash.checking": "🔍 Проверка хэша...",
@@ -51,5 +51,8 @@
   "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету.",
   "update.info.latestVersion": "🫠 Вы используете последнюю версию.",
 
-  "universal.error": "❌ Ошибка: {}"
+  "universal.error.generic": "❌ Ошибка: {}",
+  "universal.error.fileNotFound": "❌ Файл не найден.",
+
+  "experiments.error.experimentsConfigNotFound": "❌ Файл конфигурации экспериментов не был найден. Загрузка конфигурации по умолчанию..."
 }
