--- a/lang/ru.json
+++ b/lang/ru.json
@@ -41,9 +41,9 @@
   "client.error.filePermissionError": "❌ Нет прав для доступа к файлу.",
   "client.error.invalidEncryptionKey": "❌ Неверный ключ шифрования. Обычно это происходит из-за включенного VPN на сервере.",
 
-  "update.info.updateAvailable": "🆕 Вышла новая версия: {}",
+  "update.info.updateAvailable": "🤩 Вышла новая версия: {}",
   "update.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
-  "update.info.updateDownloading": "⬇️ Загрузка обновления...",
+  "update.info.updateDownloading": "⏳ Загрузка обновления...",
   "update.error.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
   "update.info.updateDownloaded": "✅ Обновление загружено.",
   "update.info.checkingForUpdates": "🔍 Поиск обновлений...",
@@ -54,5 +54,5 @@
   "universal.error.generic": "❌ Ошибка: {}",
   "universal.error.fileNotFound": "❌ Файл не найден.",
 
-  "experiments.error.experimentsConfigNotFound": "❌ Файл конфигурации экспериментов не был найден. Загрузка конфигурации по умолчанию..."
+  "experiments.warn.experimentsConfigNotFound": "⚠️ Файл конфигурации экспериментов не был найден. Загрузка конфигурации по умолчанию..."
 }
