--- a/lang/ru.json
+++ b/lang/ru.json
@@ -25,7 +25,7 @@
 
   "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
-  "main.info.updateDescription": "✨ Обновление Экспериментов!\nВы можете включить/выключить эксперименты в experiments.json\n",
+  "main.info.updateDescription": "✨ Обновление конфигурации!\nТеперь конфигурация не является экспериментом\n",
 
   "client.info.fileReceived": "✅ Файл получен и расшифрован.",
   "client.hash.checking": "🔍 Проверка хэша...",
