--- a/lang/ru.json
+++ b/lang/ru.json
@@ -54,5 +54,8 @@
   "universal.error.generic": "❌ Ошибка: {}",
   "universal.error.fileNotFound": "❌ Файл не найден.",
 
-  "experiments.warn.experimentsConfigNotFound": "⚠️ Файл конфигурации экспериментов не был найден. Загрузка конфигурации по умолчанию..."
+  "experiments.warn.experimentsConfigNotFound": "⚠️ Файл конфигурации экспериментов не был найден. Загрузка конфигурации по умолчанию...",
+
+  "experiments.file_classification.name": "Классификация файлов",
+  "experiments.file_classification.description": "Объединяет файлы основываясь на их расширении."
 }
