--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,11 +1,11 @@
 {
   "server.info.peername": "🔗 Клиент подключился под {}:{}",
-  "server.info.fileSent": "✅ Файл отправлен клиенту.",
+  "server.info.fileSent ": "✅ Файл отправлен клиенту.",
   "server.error.errorHandlingClient": "❌ Ошибка при обработке клиента: {}",
   "server.warn.serverFilesDirNotFound": "⚠️ Директория '{}' не существует. Создание...",
   "server.info.directoryCreated": "✅ Директория создана.",
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
-  "server.input.networkType": "✉️ Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
+  "server.input.networkType": "📨 Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
   "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
   "server.input.filename": ">> ",
   "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
