--- a/lang/en.json
+++ b/lang/en.json
@@ -5,8 +5,8 @@
   "server.warn.serverFilesDirNotFound": "⚠️ Directory '{}' does not exist. Creating...",
   "server.info.directoryCreated": "✅ Directory created.",
   "server.guide.filesMustBeIn": "❗ Hosted files MUST be in '{}'.",
-  "server.input.networkType": "📨 What network do you want to transfer files over?\n\n1. Public\n2. Local\n\n>> ",
-  "server.input.localIp": "🔑 Enter local server IP (192.168.X.X or 127.0.0.1): ",
+  "server.input.networkType": "📨 Which IP address do you want to use?\n\n1. Public (determined automatically)\n2. Custom (manually entered)\n\n>> ",
+  "server.input.customIp": "🔑 Enter your IP address: ",
   "server.input.filename": ">> ",
   "server.info.filename": "💽 Choose file to send or type 'refresh' to refresh the list: ",
   "server.input.port": "🚢 Enter port (default: 8888): ",
