--- a/lang/ru.json
+++ b/lang/ru.json
@@ -5,8 +5,8 @@
   "server.warn.serverFilesDirNotFound": "⚠️ Директория '{}' не существует. Создание...",
   "server.info.directoryCreated": "✅ Директория создана.",
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
-  "server.input.networkType": "📨 Через какую сеть вы хотите передавать файлы?\n\n1. По интернету (через открытые порты)\n2. По локальной сети\n\n>> ",
-  "server.input.localIp": "🔑 Введите IP адрес в локальной сети (192.168.X.X or 127.0.0.1): ",
+  "server.input.networkType": "📨 Какой IP адрес вы хотите использовать?\n\n1. Публичный (определяется автоматически)\n2. Кастомный (ручной ввод)\n\n>> ",
+  "server.input.customIp": "🔑 Введите ваш IP адрес: ",
   "server.input.filename": ">> ",
   "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
