--- a/lang/ru.json
+++ b/lang/ru.json
@@ -7,7 +7,6 @@
   "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
   "server.input.networkType": "📨 Какой IP адрес вы хотите использовать?\n\n1. Публичный (определяется автоматически)\n2. Кастомный (ручной ввод)\n\n>> ",
   "server.input.customIp": "🔑 Введите ваш IP адрес: ",
-  "server.input.filename": ">> ",
   "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
@@ -22,8 +21,10 @@
   "server.error.connectionReset": "❌ Соединение сброшено.",
   "server.error.connectionAborted": "❌ Соединение прервано.",
   "server.error.connectionRefused": "❌ Соединение отклонено.",
+  "server.info.createdZapfile": "⚡ ZapFile {} создан.",
 
-  "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов\n\n>> ",
+  "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов",
+  "main.input": "\n\n>> ",
   "main.enterToExit": "Нажмите Enter для выхода...",
   "main.info.updateDescription": "✨ Обновление конфигурации!\nТеперь конфигурация не является экспериментом\n",
 
@@ -55,5 +56,8 @@
   "universal.error.fileNotFound": "❌ Файл не найден.",
 
   "experiments.file_classification.name": "Классификация файлов",
-  "experiments.file_classification.description": "Объединяет файлы основываясь на их расширении."
+  "experiments.file_classification.description": "Объединяет файлы основываясь на их расширении.",
+  "experiments.lan_broadcast.name": "LAN-анонс файла",
+  "experiments.lan_broadcast.description": "Обеспечивает ответ клиентам в сети с информацией о раздающемся файле.",
+  "experiments.lan_broadcast.mode": "\n 3. Поиск файлов в локальной сети"
 }
