--- a/lang/ru.json
+++ b/lang/ru.json
@@ -4,36 +4,39 @@
   "server.error.errorHandlingClient": "❌ Ошибка при обработке клиента: {}",
   "server.warn.serverFilesDirNotFound": "⚠️ Директория '{}' не существует. Создание...",
   "server.info.directoryCreated": "✅ Директория создана.",
-  "server.guide.filesMustBeIn": "❗ Отправляемые файлы должны быть в папке '{}'.",
-  "server.input.networkType": "📨 Какой IP адрес вы хотите использовать?\n\n1. Публичный (определяется автоматически)\n2. Кастомный (ручной ввод)\n\n>> ",
+  "server.input.networkType": "📨 Какой IP адрес вы хотите использовать?",
+  "server.input.networkType.public": "Публичный (определяется автоматически)",
+  "server.input.networkType.custom": "Кастомный (ручной ввод)",
   "server.input.customIp": "🔑 Введите ваш IP адрес: ",
-  "server.info.filename": "💽 Выберите файл для отправки или введите 'refresh' для обновления списка: ",
+  "server.info.filePath": "💽 Введите путь до файла, который хотите отправить: ",
   "server.input.port": "🚢 Введите порт (по умолчанию: 8888): ",
   "server.info.serverKey": "🔑 Ключ сервера: {}",
   "server.info.running": "🌐 Сервер запущен...",
-  "server.error.publicIpNotFound": "❌ Невозможно определить публичный IP адрес.",
+  "server.error.invalidIp": "❌ Неверный IP адрес.",
   "server.info.gettingIp": "🔍 Получение публичного IP адреса...",
   "server.config.filename": "📄 Имя файла",
   "server.config.port": "🔌 Порт",
   "server.config.ip": "🖥️ IP",
-  "server.error.noFiles": "❌ Нет файлов. Пожалуйста, загрузите файл и попробуйте ещё раз.",
-  "server.error.invalidFilename": "❌ Неверное имя файла.",
+  "server.error.fileNotFound": "❌ Файл не найден: {file}",
   "server.error.connectionReset": "❌ Соединение сброшено.",
   "server.error.connectionAborted": "❌ Соединение прервано.",
   "server.error.connectionRefused": "❌ Соединение отклонено.",
+  "server.error.invalidPort": "❌ Неверный порт: {port}",
   "server.info.createdZapfile": "⚡ ZapFile {} создан.",
+  "server.tip.storageDirectory": "❕ Совет: для удобного доступа к отправляемым файлам поместите их в директорию *server_files* в корне ZapFiles.",
+  "server.tip.fileNavigation": "❕ Совет: при выборе файла нажмите Tab, чтобы открыть список доступных файлов. Для навигации используйте стрелки на клавиатуре или повторно нажимайте Tab для перехода к следующему файлу.",
 
-  "main.choose.mode": "🚀 Выберите режим\n\n 1. Отправка фалов\n 2. Скачивание файлов",
-  "main.input": "\n\n>> ",
+  "main.mode.select": "🚀 Выберите режим",
+  "main.mode.host": "Раздать файл",
+  "main.mode.get": "Скачать файл",
   "main.enterToExit": "Нажмите Enter для выхода...",
-  "main.info.updateDescription": "✨ Обновление конфигурации!\nТеперь конфигурация не является экспериментом\n",
 
   "client.info.fileReceived": "✅ Файл получен и расшифрован.",
   "client.hash.checking": "🔍 Проверка хэша...",
   "client.hash.correct": "✅ Хэш файла верный.",
   "client.hash.incorrect": "❌ Хэш файла неверный.",
   "client.info.fileSaved": "💾 Файл сохранен.",
-  "client.choose.delete": "🗑️ Вы хотите удалить этот файл? (y/n): ",
+  "client.choose.delete": "🗑️ Вы хотите удалить этот файл?",
   "client.info.fileDeleted": "🔥 Файл удален.",
   "client.input.key": "🔑 Введите ключ сервера: ",
   "client.error.invalidKey": "❌ Неверный формат ключа. Пожалуйста, используйте 'ip:порт:имя файла:хэш файла'",
@@ -43,7 +46,7 @@
   "client.error.invalidEncryptionKey": "❌ Неверный ключ шифрования. Обычно это происходит из-за включенного VPN на сервере.",
 
   "update.info.updateAvailable": "🤩 Вышла новая версия: {}",
-  "update.info.updateUser": "👉 Хотите обновиться? (Y/n) ",
+  "update.info.confirmUpdate": "👉 Хотите обновиться?",
   "update.info.updateDownloading": "⏳ Загрузка обновления...",
   "update.error.updateDownloadFailed": "❌ Не удалось загрузить обновление.",
   "update.info.updateDownloaded": "✅ Обновление загружено.",
@@ -52,12 +55,9 @@
   "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету.",
   "update.info.latestVersion": "🫠 Вы используете последнюю версию.",
 
-  "universal.error.generic": "❌ Ошибка: {}",
-  "universal.error.fileNotFound": "❌ Файл не найден.",
-
   "experiments.file_classification.name": "Классификация файлов",
   "experiments.file_classification.description": "Объединяет файлы основываясь на их расширении.",
   "experiments.lan_broadcast.name": "LAN-анонс файла",
   "experiments.lan_broadcast.description": "Обеспечивает ответ клиентам в сети с информацией о раздающемся файле.",
-  "experiments.lan_broadcast.mode": "\n 3. Поиск файлов в локальной сети"
+  "experiments.lan_broadcast.scan_mode": "Поиск файлов в локальной сети"
 }
