--- a/lang/ru.json
+++ b/lang/ru.json
@@ -54,6 +54,7 @@
   "update.error.connectionTimedOut": "❌ Превышено время ожидания, пожалуйста проверьте подключение к интернету.",
   "update.error.connectionError": "❌ При обращение к API произошла ошибка, пожалуйста проверьте подключение к интернету.",
   "update.info.latestVersion": "🫠 Вы используете последнюю версию.",
+  "update.error.platformNotSupported": "❌ К сожалению ваша платформа не поддерживает автоматическую установку обновлений. Вы можете собрать новую версию из исходников.",
 
   "experiments.file_classification.name": "Классификация файлов",
   "experiments.file_classification.description": "Объединяет файлы основываясь на их расширении.",
